03. js-portfolio-84-css-animation. Img and lines.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
                 </ul>
             </div>
         </nav>
+
+        <div class="img">
+            <img src="./assets/images/7.png" alt="" id="mainimage">
+        </div>
+
+        <div class="square-container">
+            <div class="square red"></div>
+            <div class="square white"></div>
+            <div class="square red"></div>
+            <div class="square white"></div>
+            <div class="square red"></div>
+            <div class="square white"></div>
+        </div>
     </header>
 
     <script src="./assets/js/main.js"></script>
