04. js-portfolio-84-css-animation. Slider, social section.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,27 @@
             <div class="square red"></div>
             <div class="square white"></div>
         </div>
+
+        <div class="slider">
+            <a href="#">
+                <img src="./assets/images/7.png" alt="" onclick="changeimage('./assets/images/7.png', this)">
+            </a>
+            <a href="#">
+                <img src="./assets/images/5.png" alt="" onclick="changeimage('./assets/images/5.png', this)">
+            </a>
+            <a href="#">
+                <img src="./assets/images/2.png" alt="" onclick="changeimage('./assets/images/2.png', this)">
+            </a>
+        </div>
+
+        <div class="social">
+            <li><i class="fa-brands fa-instagram"></i></li>
+            <li><i class="fa-brands fa-facebook"></i></li>
+            <li><i class="fa-brands fa-whatsapp"></i></li>
+            <li><i class="fa-brands fa-twitter"></i></li>
+            <li><i class="fa-brands fa-linkedin"></i></li>
+            <li><i class="fa-brands fa-github"></i></li>
+        </div>
     </header>
 
     <script src="./assets/js/main.js"></script>
