05. js-portfolio-84-css-animation. Air section.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,39 @@
             <li><i class="fa-brands fa-linkedin"></i></li>
             <li><i class="fa-brands fa-github"></i></li>
         </div>
+
+        <div class="air">
+            <div class="nike">
+                <h1 class="animated-text">AIR JORDAN</h1>
+                <span class="animated-text delay-1">NIKE</span>
+            </div>
+
+            <p class="animated-text delay-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quisquam
+                eveniet ipsum quod atque. Atque expedita non, provident nobis cupiditate
+                inventore aperiam quisquam quia recusandae eaque? Officia pariatur neque
+                dolorum modi? Cupiditate unde quaerat dolore laboriosam quia ullam
+                perferendis eius repellat asperiores optio doloribus atque saepe, aliquid
+                commodi totam corrupti aliquam molestiae odit alias dicta ab! Beatae quam,
+                doloribus maxime nihil eaque porro, omnis, magnam perspiciatis eligendi
+                dicta veritatis quod!
+            </p>
+
+            <span class="sp animated-text delay-3">$320</span>
+
+            <li onclick="changeimagesize(10)" class="animated-text delay-4">10</li>
+            <li onclick="changeimagesize(11)" class="animated-text delay-5">11</li>
+            <li onclick="changeimagesize(12)" class="animated-text delay-6">12</li>
+            <li onclick="changeimagesize(15)" class="animated-text delay-7">15</li>
+
+            <span class="counter">0</span>
+
+            <button class="animated-text delay-8" onclick="increasecounter()">
+                ADD TO CART
+            </button>
+
+            <img src="./assets/images/4.png" alt="">
+        </div>
     </header>
 
     <script src="./assets/js/main.js"></script>
