06. js-portfolio-84-css-animation. Review section.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,45 @@
 
             <img src="./assets/images/4.png" alt="">
         </div>
+
+        <div class="reviews">
+            <div class="one">
+                <img src="./assets/images/11.png" alt="">
+                <span>Nice shoes</span>
+                <div class="list">
+                    <li><i class="fa-solid fa-star"></i></li>
+                    <li><i class="fa-solid fa-star"></i></li>
+                    <li><i class="fa-solid fa-star"></i></li>
+                    <li><i class="fa-solid fa-star"></i></li>
+                    <li><i class="fa-regular fa-star"></i></li>
+                </div>
+                <a href="" class="plus"><i class="fa-solid fa-plus"></i></a>
+            </div>
+            <div class="one">
+                <img src="./assets/images/11.png" alt="">
+                <span>Nice shoes</span>
+                <div class="list">
+                    <li><i class="fa-solid fa-star"></i></li>
+                    <li><i class="fa-solid fa-star"></i></li>
+                    <li><i class="fa-solid fa-star"></i></li>
+                    <li><i class="fa-regular fa-star"></i></li>
+                    <li><i class="fa-regular fa-star"></i></li>
+                </div>
+                <a href="" class="plus"><i class="fa-solid fa-plus"></i></a>
+            </div>
+            <div class="one">
+                <img src="./assets/images/11.png" alt="">
+                <span>Nice shoes</span>
+                <div class="list">
+                    <li><i class="fa-solid fa-star"></i></li>
+                    <li><i class="fa-solid fa-star"></i></li>
+                    <li><i class="fa-solid fa-star"></i></li>
+                    <li><i class="fa-solid fa-star"></i></li>
+                    <li><i class="fa-regular fa-star"></i></li>
+                </div>
+                <a href="" class="plus"><i class="fa-solid fa-plus"></i></a>
+            </div>
+        </div>
     </header>
 
     <script src="./assets/js/main.js"></script>
