07. js-portfolio-84-css-animation. Change slide, change size, counter.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
 
         <div class="img">
-            <img src="./assets/images/7.png" alt="" id="mainimage">
+            <img src="./assets/images/7.png" alt="" id="mainImage">
         </div>
 
         <div class="square-container">
@@ -53,14 +53,14 @@
         </div>
 
         <div class="slider">
-            <a href="#">
-                <img src="./assets/images/7.png" alt="" onclick="changeimage('./assets/images/7.png', this)">
+            <a>
+                <img src="./assets/images/7.png" alt="" onclick="changeImage('./assets/images/7.png', this)">
             </a>
-            <a href="#">
-                <img src="./assets/images/5.png" alt="" onclick="changeimage('./assets/images/5.png', this)">
+            <a>
+                <img src="./assets/images/5.png" alt="" onclick="changeImage('./assets/images/5.png', this)">
             </a>
-            <a href="#">
-                <img src="./assets/images/2.png" alt="" onclick="changeimage('./assets/images/2.png', this)">
+            <a>
+                <img src="./assets/images/2.png" alt="" onclick="changeImage('./assets/images/2.png', this)">
             </a>
         </div>
 
@@ -92,14 +92,14 @@
 
             <span class="sp animated-text delay-3">$320</span>
 
-            <li onclick="changeimagesize(10)" class="animated-text delay-4">10</li>
-            <li onclick="changeimagesize(11)" class="animated-text delay-5">11</li>
-            <li onclick="changeimagesize(12)" class="animated-text delay-6">12</li>
-            <li onclick="changeimagesize(15)" class="animated-text delay-7">15</li>
+            <li onclick="changeImageSize(10)" class="animated-text delay-4">10</li>
+            <li onclick="changeImageSize(11)" class="animated-text delay-5">11</li>
+            <li onclick="changeImageSize(12)" class="animated-text delay-6">12</li>
+            <li onclick="changeImageSize(15)" class="animated-text delay-7">15</li>
 
             <span class="counter">0</span>
 
-            <button class="animated-text delay-8" onclick="increasecounter()">
+            <button class="animated-text delay-8" onclick="increaseCounter()">
                 ADD TO CART
             </button>
 
